parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    VAR
    COMPARE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> FCOMMENT block
Rule 2     block -> varDecl statement principal
Rule 3     principal -> PRINCIPAL LPARENT varDecl RPARENT SEMICOLOM block
Rule 4     principal -> PRINCIPAL LPARENT statement RPARENT SEMICOLOM block
Rule 5     principal -> empty
Rule 6     varDecl -> DEF LPARENT ID COMMA DATATYPE RPARENT SEMICOLOM block
Rule 7     varDecl -> DEF LPARENT ID COMMA DATATYPE COMMA expression RPARENT SEMICOLOM block
Rule 8     varDecl -> empty
Rule 9     identList -> ID
Rule 10    identList -> identList COMMA ID
Rule 11    statement -> ALTER LPARENT ID COMMA expression RPARENT SEMICOLOM block
Rule 12    statement -> CALL LPARENT ID RPARENT block
Rule 13    statement -> ISTRUE LPARENT ID RPARENT SEMICOLOM block
Rule 14    statement -> IF condition LPARENT statement RPARENT block
Rule 15    statement -> WHILE condition LPARENT statement RPARENT SEMICOLOM block
Rule 16    statement -> PROC ID LPARENT varDecl RPARENT SEMICOLOM block
Rule 17    statement -> PROC ID LPARENT statement RPARENT SEMICOLOM block
Rule 18    statement -> print block
Rule 19    statement -> MOVER LPARENT movimiento RPARENT SEMICOLOM block
Rule 20    statement -> comment block
Rule 21    statement -> ID LPARENT ID RPARENT SEMICOLOM block
Rule 22    statement -> ID LPARENT statement RPARENT SEMICOLOM block
Rule 23    statement -> ID LPARENT BOOLEAN RPARENT SEMICOLOM block
Rule 24    statement -> ID LPARENT expression RPARENT SEMICOLOM block
Rule 25    statement -> NOT LPARENT ID RPARENT SEMICOLOM block
Rule 26    statement -> ALEATORIO LPARENT RPARENT SEMICOLOM block
Rule 27    statement -> REPEAT LPARENT block RPARENT SEMICOLOM block
Rule 28    statement -> BREAK
Rule 29    statement -> UNTIL LPARENT block RPARENT condition SEMICOLOM block
Rule 30    statement -> CASE WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT SEMICOLOM block
Rule 31    statement -> CASE WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT ELSE LPARENT block RPARENT SEMICOLOM block
Rule 32    statement -> CASE ID whenloop SEMICOLOM block
Rule 33    statement -> CASE ID whenloop ELSE LPARENT block RPARENT SEMICOLOM block
Rule 34    statement -> empty
Rule 35    whenloop -> WHEN condition THEN LPARENT block RPARENT whenloop
Rule 36    whenloop -> empty
Rule 37    print -> PRINT LPARENT ID RPARENT SEMICOLOM block
Rule 38    print -> PRINT LPARENT STRING RPARENT SEMICOLOM block
Rule 39    print -> PRINT LPARENT expression RPARENT SEMICOLOM block
Rule 40    condition -> expression
Rule 41    condition -> expression relation expression
Rule 42    movimiento -> ATR
Rule 43    movimiento -> ADL
Rule 44    movimiento -> ADE
Rule 45    movimiento -> AIZ
Rule 46    movimiento -> IZQ
Rule 47    movimiento -> DER
Rule 48    movimiento -> DDE
Rule 49    movimiento -> DIZ
Rule 50    relation -> ASSIGN
Rule 51    relation -> NE
Rule 52    relation -> LT
Rule 53    relation -> GT
Rule 54    relation -> LTE
Rule 55    relation -> GTE
Rule 56    expression -> term
Rule 57    expression -> addingOperator term
Rule 58    expression -> expression addingOperator term
Rule 59    addingOperator -> PLUS
Rule 60    addingOperator -> MINUS
Rule 61    term -> factor
Rule 62    term -> term multiplyingOperator factor
Rule 63    multiplyingOperator -> TIMES
Rule 64    multiplyingOperator -> DIVIDE
Rule 65    DATATYPE -> INTEGERTP
Rule 66    DATATYPE -> BOOLEANTP
Rule 67    factor -> INTEGER
Rule 68    factor -> BOOLEAN
Rule 69    factor -> ID
Rule 70    factor -> LPARENT expression RPARENT
Rule 71    FCOMMENT -> COMMENT
Rule 72    comment -> COMMENT comment
Rule 73    comment -> empty
Rule 74    empty -> <empty>

Terminals, with rules where they appear

ADE                  : 44
ADL                  : 43
AIZ                  : 45
ALEATORIO            : 26
ALTER                : 11
ASSIGN               : 50
ATR                  : 42
BOOLEAN              : 23 68
BOOLEANTP            : 66
BREAK                : 28
CALL                 : 12
CASE                 : 30 31 32 33
COMMA                : 6 7 7 10 11
COMMENT              : 71 72
COMPARE              : 
DDE                  : 48
DEF                  : 6 7
DER                  : 47
DIVIDE               : 64
DIZ                  : 49
ELSE                 : 31 33
FALSE                : 
GT                   : 53
GTE                  : 55
ID                   : 6 7 9 10 11 12 13 16 17 21 21 22 23 24 25 32 33 37 69
IF                   : 14
INTEGER              : 67
INTEGERTP            : 65
ISTRUE               : 13
IZQ                  : 46
LPARENT              : 3 4 6 7 11 12 13 14 15 16 17 19 21 22 23 24 25 26 27 29 30 30 31 31 31 33 35 37 38 39 70
LT                   : 52
LTE                  : 54
MINUS                : 60
MOVER                : 19
NE                   : 51
NOT                  : 25
PLUS                 : 59
PRINCIPAL            : 3 4
PRINT                : 37 38 39
PROC                 : 16 17
REPEAT               : 27
RPARENT              : 3 4 6 7 11 12 13 14 15 16 17 19 21 22 23 24 25 26 27 29 30 30 31 31 31 33 35 37 38 39 70
SEMICOLOM            : 3 4 6 7 11 13 15 16 17 19 21 22 23 24 25 26 27 29 30 31 32 33 37 38 39
STRING               : 38
THEN                 : 30 31 35
TIMES                : 63
TRUE                 : 
UNTIL                : 29
VAR                  : 
WHEN                 : 30 31 35
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

DATATYPE             : 6 7
FCOMMENT             : 1
addingOperator       : 57 58
block                : 1 3 4 6 7 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 27 29 29 30 30 31 31 31 32 33 33 35 37 38 39
comment              : 20 72
condition            : 14 15 29 30 31 35
empty                : 5 8 34 36 73
expression           : 7 11 24 39 40 41 41 58 70
factor               : 61 62
identList            : 10
movimiento           : 19
multiplyingOperator  : 62
principal            : 2
print                : 18
program              : 0
relation             : 41
statement            : 2 4 14 15 17 22
term                 : 56 57 58 62
varDecl              : 2 3 16
whenloop             : 32 33 35

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . FCOMMENT block
    (71) FCOMMENT -> . COMMENT

    COMMENT         shift and go to state 1

    program                        shift and go to state 2
    FCOMMENT                       shift and go to state 3

state 1

    (71) FCOMMENT -> COMMENT .

    DEF             reduce using rule 71 (FCOMMENT -> COMMENT .)
    ALTER           reduce using rule 71 (FCOMMENT -> COMMENT .)
    CALL            reduce using rule 71 (FCOMMENT -> COMMENT .)
    ISTRUE          reduce using rule 71 (FCOMMENT -> COMMENT .)
    IF              reduce using rule 71 (FCOMMENT -> COMMENT .)
    WHILE           reduce using rule 71 (FCOMMENT -> COMMENT .)
    PROC            reduce using rule 71 (FCOMMENT -> COMMENT .)
    MOVER           reduce using rule 71 (FCOMMENT -> COMMENT .)
    COMMENT         reduce using rule 71 (FCOMMENT -> COMMENT .)
    ID              reduce using rule 71 (FCOMMENT -> COMMENT .)
    NOT             reduce using rule 71 (FCOMMENT -> COMMENT .)
    ALEATORIO       reduce using rule 71 (FCOMMENT -> COMMENT .)
    REPEAT          reduce using rule 71 (FCOMMENT -> COMMENT .)
    BREAK           reduce using rule 71 (FCOMMENT -> COMMENT .)
    UNTIL           reduce using rule 71 (FCOMMENT -> COMMENT .)
    CASE            reduce using rule 71 (FCOMMENT -> COMMENT .)
    PRINT           reduce using rule 71 (FCOMMENT -> COMMENT .)
    PRINCIPAL       reduce using rule 71 (FCOMMENT -> COMMENT .)
    $end            reduce using rule 71 (FCOMMENT -> COMMENT .)


state 2

    (0) S' -> program .



state 3

    (1) program -> FCOMMENT . block
    (2) block -> . varDecl statement principal
    (6) varDecl -> . DEF LPARENT ID COMMA DATATYPE RPARENT SEMICOLOM block
    (7) varDecl -> . DEF LPARENT ID COMMA DATATYPE COMMA expression RPARENT SEMICOLOM block
    (8) varDecl -> . empty
    (74) empty -> .

  ! shift/reduce conflict for DEF resolved as shift
    DEF             shift and go to state 7
    $end            reduce using rule 74 (empty -> .)
    ALTER           reduce using rule 74 (empty -> .)
    CALL            reduce using rule 74 (empty -> .)
    ISTRUE          reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    PROC            reduce using rule 74 (empty -> .)
    MOVER           reduce using rule 74 (empty -> .)
    COMMENT         reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    NOT             reduce using rule 74 (empty -> .)
    ALEATORIO       reduce using rule 74 (empty -> .)
    REPEAT          reduce using rule 74 (empty -> .)
    BREAK           reduce using rule 74 (empty -> .)
    UNTIL           reduce using rule 74 (empty -> .)
    CASE            reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    PRINCIPAL       reduce using rule 74 (empty -> .)
    RPARENT         reduce using rule 74 (empty -> .)
    SEMICOLOM       reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)

  ! DEF             [ reduce using rule 74 (empty -> .) ]

    varDecl                        shift and go to state 4
    empty                          shift and go to state 5
    block                          shift and go to state 6

state 4

    (2) block -> varDecl . statement principal
    (11) statement -> . ALTER LPARENT ID COMMA expression RPARENT SEMICOLOM block
    (12) statement -> . CALL LPARENT ID RPARENT block
    (13) statement -> . ISTRUE LPARENT ID RPARENT SEMICOLOM block
    (14) statement -> . IF condition LPARENT statement RPARENT block
    (15) statement -> . WHILE condition LPARENT statement RPARENT SEMICOLOM block
    (16) statement -> . PROC ID LPARENT varDecl RPARENT SEMICOLOM block
    (17) statement -> . PROC ID LPARENT statement RPARENT SEMICOLOM block
    (18) statement -> . print block
    (19) statement -> . MOVER LPARENT movimiento RPARENT SEMICOLOM block
    (20) statement -> . comment block
    (21) statement -> . ID LPARENT ID RPARENT SEMICOLOM block
    (22) statement -> . ID LPARENT statement RPARENT SEMICOLOM block
    (23) statement -> . ID LPARENT BOOLEAN RPARENT SEMICOLOM block
    (24) statement -> . ID LPARENT expression RPARENT SEMICOLOM block
    (25) statement -> . NOT LPARENT ID RPARENT SEMICOLOM block
    (26) statement -> . ALEATORIO LPARENT RPARENT SEMICOLOM block
    (27) statement -> . REPEAT LPARENT block RPARENT SEMICOLOM block
    (28) statement -> . BREAK
    (29) statement -> . UNTIL LPARENT block RPARENT condition SEMICOLOM block
    (30) statement -> . CASE WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT SEMICOLOM block
    (31) statement -> . CASE WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT ELSE LPARENT block RPARENT SEMICOLOM block
    (32) statement -> . CASE ID whenloop SEMICOLOM block
    (33) statement -> . CASE ID whenloop ELSE LPARENT block RPARENT SEMICOLOM block
    (34) statement -> . empty
    (37) print -> . PRINT LPARENT ID RPARENT SEMICOLOM block
    (38) print -> . PRINT LPARENT STRING RPARENT SEMICOLOM block
    (39) print -> . PRINT LPARENT expression RPARENT SEMICOLOM block
    (72) comment -> . COMMENT comment
    (73) comment -> . empty
    (74) empty -> .

  ! shift/reduce conflict for ALTER resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for ISTRUE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for PROC resolved as shift
  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for ALEATORIO resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for UNTIL resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    ALTER           shift and go to state 11
    CALL            shift and go to state 25
    ISTRUE          shift and go to state 13
    IF              shift and go to state 23
    WHILE           shift and go to state 9
    PROC            shift and go to state 27
    MOVER           shift and go to state 17
    ID              shift and go to state 22
    NOT             shift and go to state 26
    ALEATORIO       shift and go to state 21
    REPEAT          shift and go to state 20
    BREAK           shift and go to state 24
    UNTIL           shift and go to state 14
    CASE            shift and go to state 12
    PRINT           shift and go to state 10
    COMMENT         shift and go to state 19
    $end            reduce using rule 74 (empty -> .)
    DEF             reduce using rule 74 (empty -> .)
    PRINCIPAL       reduce using rule 74 (empty -> .)
    RPARENT         reduce using rule 74 (empty -> .)
    SEMICOLOM       reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)

  ! ALTER           [ reduce using rule 74 (empty -> .) ]
  ! CALL            [ reduce using rule 74 (empty -> .) ]
  ! ISTRUE          [ reduce using rule 74 (empty -> .) ]
  ! IF              [ reduce using rule 74 (empty -> .) ]
  ! WHILE           [ reduce using rule 74 (empty -> .) ]
  ! PROC            [ reduce using rule 74 (empty -> .) ]
  ! MOVER           [ reduce using rule 74 (empty -> .) ]
  ! COMMENT         [ reduce using rule 74 (empty -> .) ]
  ! ID              [ reduce using rule 74 (empty -> .) ]
  ! NOT             [ reduce using rule 74 (empty -> .) ]
  ! ALEATORIO       [ reduce using rule 74 (empty -> .) ]
  ! REPEAT          [ reduce using rule 74 (empty -> .) ]
  ! BREAK           [ reduce using rule 74 (empty -> .) ]
  ! UNTIL           [ reduce using rule 74 (empty -> .) ]
  ! CASE            [ reduce using rule 74 (empty -> .) ]
  ! PRINT           [ reduce using rule 74 (empty -> .) ]

    comment                        shift and go to state 8
    empty                          shift and go to state 18
    statement                      shift and go to state 15
    print                          shift and go to state 16

state 5

    (8) varDecl -> empty .

    ALTER           reduce using rule 8 (varDecl -> empty .)
    CALL            reduce using rule 8 (varDecl -> empty .)
    ISTRUE          reduce using rule 8 (varDecl -> empty .)
    IF              reduce using rule 8 (varDecl -> empty .)
    WHILE           reduce using rule 8 (varDecl -> empty .)
    PROC            reduce using rule 8 (varDecl -> empty .)
    MOVER           reduce using rule 8 (varDecl -> empty .)
    COMMENT         reduce using rule 8 (varDecl -> empty .)
    ID              reduce using rule 8 (varDecl -> empty .)
    NOT             reduce using rule 8 (varDecl -> empty .)
    ALEATORIO       reduce using rule 8 (varDecl -> empty .)
    REPEAT          reduce using rule 8 (varDecl -> empty .)
    BREAK           reduce using rule 8 (varDecl -> empty .)
    UNTIL           reduce using rule 8 (varDecl -> empty .)
    CASE            reduce using rule 8 (varDecl -> empty .)
    PRINT           reduce using rule 8 (varDecl -> empty .)
    DEF             reduce using rule 8 (varDecl -> empty .)
    PRINCIPAL       reduce using rule 8 (varDecl -> empty .)
    $end            reduce using rule 8 (varDecl -> empty .)
    RPARENT         reduce using rule 8 (varDecl -> empty .)


state 6

    (1) program -> FCOMMENT block .

    $end            reduce using rule 1 (program -> FCOMMENT block .)


state 7

    (6) varDecl -> DEF . LPARENT ID COMMA DATATYPE RPARENT SEMICOLOM block
    (7) varDecl -> DEF . LPARENT ID COMMA DATATYPE COMMA expression RPARENT SEMICOLOM block

    LPARENT         shift and go to state 28


state 8

    (20) statement -> comment . block
    (2) block -> . varDecl statement principal
    (6) varDecl -> . DEF LPARENT ID COMMA DATATYPE RPARENT SEMICOLOM block
    (7) varDecl -> . DEF LPARENT ID COMMA DATATYPE COMMA expression RPARENT SEMICOLOM block
    (8) varDecl -> . empty
    (74) empty -> .

  ! shift/reduce conflict for DEF resolved as shift
    DEF             shift and go to state 7
    $end            reduce using rule 74 (empty -> .)
    ALTER           reduce using rule 74 (empty -> .)
    CALL            reduce using rule 74 (empty -> .)
    ISTRUE          reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    PROC            reduce using rule 74 (empty -> .)
    MOVER           reduce using rule 74 (empty -> .)
    COMMENT         reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    NOT             reduce using rule 74 (empty -> .)
    ALEATORIO       reduce using rule 74 (empty -> .)
    REPEAT          reduce using rule 74 (empty -> .)
    BREAK           reduce using rule 74 (empty -> .)
    UNTIL           reduce using rule 74 (empty -> .)
    CASE            reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    PRINCIPAL       reduce using rule 74 (empty -> .)
    RPARENT         reduce using rule 74 (empty -> .)
    SEMICOLOM       reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)

  ! DEF             [ reduce using rule 74 (empty -> .) ]

    varDecl                        shift and go to state 4
    empty                          shift and go to state 5
    block                          shift and go to state 29

state 9

    (15) statement -> WHILE . condition LPARENT statement RPARENT SEMICOLOM block
    (40) condition -> . expression
    (41) condition -> . expression relation expression
    (56) expression -> . term
    (57) expression -> . addingOperator term
    (58) expression -> . expression addingOperator term
    (61) term -> . factor
    (62) term -> . term multiplyingOperator factor
    (59) addingOperator -> . PLUS
    (60) addingOperator -> . MINUS
    (67) factor -> . INTEGER
    (68) factor -> . BOOLEAN
    (69) factor -> . ID
    (70) factor -> . LPARENT expression RPARENT

    PLUS            shift and go to state 37
    MINUS           shift and go to state 39
    INTEGER         shift and go to state 33
    BOOLEAN         shift and go to state 35
    ID              shift and go to state 34
    LPARENT         shift and go to state 31

    addingOperator                 shift and go to state 32
    term                           shift and go to state 30
    condition                      shift and go to state 40
    factor                         shift and go to state 36
    expression                     shift and go to state 38

state 10

    (37) print -> PRINT . LPARENT ID RPARENT SEMICOLOM block
    (38) print -> PRINT . LPARENT STRING RPARENT SEMICOLOM block
    (39) print -> PRINT . LPARENT expression RPARENT SEMICOLOM block

    LPARENT         shift and go to state 41


state 11

    (11) statement -> ALTER . LPARENT ID COMMA expression RPARENT SEMICOLOM block

    LPARENT         shift and go to state 42


state 12

    (30) statement -> CASE . WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT SEMICOLOM block
    (31) statement -> CASE . WHEN LPARENT condition RPARENT THEN LPARENT block RPARENT ELSE LPARENT block RPARENT SEMICOLOM block
    (32) statement -> CASE . ID whenloop SEMICOLOM block
    (33) statement -> CASE . ID whenloop ELSE LPARENT block RPARENT SEMICOLOM block

    WHEN            shift and go to state 43
    ID              shift and go to state 44


state 13

    (13) statement -> ISTRUE . LPARENT ID RPARENT SEMICOLOM block

    LPARENT         shift and go to state 45


state 14

    (29) statement -> UNTIL . LPARENT block RPARENT condition SEMICOLOM block

    LPARENT         shift and go to state 46


state 15

    (2) block -> varDecl statement . principal
    (3) principal -> . PRINCIPAL LPARENT varDecl RPARENT SEMICOLOM block
    (4) principal -> . PRINCIPAL LPARENT statement RPARENT SEMICOLOM block
    (5) principal -> . empty
    (74) empty -> .

  ! shift/reduce conflict for PRINCIPAL resolved as shift
    PRINCIPAL       shift and go to state 49
    $end            reduce using rule 74 (empty -> .)
    ALTER           reduce using rule 74 (empty -> .)
    CALL            reduce using rule 74 (empty -> .)
    ISTRUE          reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    PROC            reduce using rule 74 (empty -> .)
    MOVER           reduce using rule 74 (empty -> .)
    COMMENT         reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    NOT             reduce using rule 74 (empty -> .)
    ALEATORIO       reduce using rule 74 (empty -> .)
    REPEAT          reduce using rule 74 (empty -> .)
    BREAK           reduce using rule 74 (empty -> .)
    UNTIL           reduce using rule 74 (empty -> .)
    CASE            reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    DEF             reduce using rule 74 (empty -> .)
    RPARENT         reduce using rule 74 (empty -> .)
    SEMICOLOM       reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)

  ! PRINCIPAL       [ reduce using rule 74 (empty -> .) ]

    empty                          shift and go to state 47
    principal                      shift and go to state 48

state 16

    (18) statement -> print . block
    (2) block -> . varDecl statement principal
    (6) varDecl -> . DEF LPARENT ID COMMA DATATYPE RPARENT SEMICOLOM block
    (7) varDecl -> . DEF LPARENT ID COMMA DATATYPE COMMA expression RPARENT SEMICOLOM block
    (8) varDecl -> . empty
    (74) empty -> .

  ! shift/reduce conflict for DEF resolved as shift
    DEF             shift and go to state 7
    $end            reduce using rule 74 (empty -> .)
    ALTER           reduce using rule 74 (empty -> .)
    CALL            reduce using rule 74 (empty -> .)
    ISTRUE          reduce using rule 74 (empty -> .)
    IF              reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    PROC            reduce using rule 74 (empty -> .)
    MOVER           reduce using rule 74 (empty -> .)
    COMMENT         reduce using rule 74 (empty -> .)
    ID              reduce using rule 74 (empty -> .)
    NOT             reduce using rule 74 (empty -> .)
    ALEATORIO       reduce using rule 74 (empty -> .)
    REPEAT          reduce using rule 74 (empty -> .)
    BREAK           reduce using rule 74 (empty -> .)
    UNTIL           reduce using rule 74 (empty -> .)
    CASE            reduce using rule 74 (empty -> .)
    PRINT           reduce using rule 74 (empty -> .)
    PRINCIPAL       reduce using rule 74 (empty -> .)
    RPARENT         reduce using rule 74 (empty -> .)
    SEMICOLOM       reduce using rule 74 (empty -> .)
    ELSE            reduce using rule 74 (empty -> .)

  ! DEF             [ reduce using rule 74 (empty -> .) ]

    varDecl                        shift and go to state 4
    empty                          shift and go to state 5
    block                          shift and go to state 50

state 17

    (19) statement -> MOVER . LPARENT movimiento RPARENT SEMICOLOM block

    LPARENT         shift and go to state 51


state 18

    (34) statement -> empty .
    (73) comment -> empty .

  ! reduce/reduce conflict for DEF resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for ALTER resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for CALL resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for ISTRUE resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for IF resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for WHILE resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for PROC resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for MOVER resolved using rule 34 (statement -> empty .)
  ! reduce/reduce conflict for COMMENT resolved using rule 34 (statement -> empty .)
